@@ -1,3 +1,8 @@
+2007-09-26  Tristan Gingold  <gingold@adacore.com>
+
+	* som.c (som_get_reloc_upper_bound): If there are no relocs return
+	enough space to hold a NULL pointer.
+
 2007-09-26  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (ppc_build_one_stub): Correct rel_hdr.sh_size.
